Quorum/Library/Tests/TypeChecker/Pass/ExpAssignIntObjUndefinedField.quorum
class Main
    Integer int
    action Main
        int = cast(Integer, undefined)
        if int = undefined
            output "passed"
        end
    end
end