Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntObjText.quorum
class main
    action Main
        Integer int
        int = cast(Integer, "text")
    end
end